--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
@@ -2,6 +2,7 @@
 [% USE Branches %]
 [% USE Koha %]
 [% USE Borrowers %]
+[% USE AuthorisedValues %]
 
 [% INCLUDE 'doc-head-open.inc' %]
 <title>Koha &rsaquo; Circulation &rsaquo; Check in [% title |html %]</title>
@@ -378,6 +379,23 @@ $(document).ready(function () {
     <div class="dialog alert">
         <h3>Check in message</h3>
         [% FOREACH errmsgloo IN errmsgloop %]
+                    [% IF ( errmsgloo.NotForLoanStatusUpdated ) %]
+                        <p class="problem">
+                            Not for loan status updated
+                            from
+                            [% IF errmsgloo.NotForLoanStatusUpdated.from %]
+                                [% AuthorisedValues.GetByCode( 'NOT_LOAN', errmsgloo.NotForLoanStatusUpdated.from ) %]
+                            [% ELSE %]
+                                being available for loan
+                            [% END %]
+                            to
+                            [% IF errmsgloo.NotForLoanStatusUpdated.to %]
+                                [% AuthorisedValues.GetByCode( 'NOT_LOAN', errmsgloo.NotForLoanStatusUpdated.to ) %]
+                            [% ELSE %]
+                                being available for loan
+                            [% END %]
+                        </p>
+                    [% END %]
                     [% IF ( errmsgloo.badbarcode ) %]
                         <p class="problem">No item with barcode: [% errmsgloo.msg %]</p>
                     [% END %]
