--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
@@ -239,6 +239,28 @@
 [% END %]
 [% END %]
 
+    <fieldset class="rows" id="ssn_fieldset">
+        <legend id="ssn_legend">Tarkista sotun olemassaolo</legend>
+
+        <div id="ssn_notifier" style="font-weight: bold"></div>
+
+        <ol>
+            <li>
+                <label for="ssn_username" class="">Käyttäjätunnuksesi: </label>
+                <input type="text" name="ssn_username" class="valid">
+            </li>
+            <li>
+                <label for="ssn_password" class="">Salasanasi: </label>
+                <input type="password" name="ssn_password" class="valid">
+            </li>
+            <li>
+                <label for="ssn_ssn" class="">Sotu: </label>
+                <input type="text" name="ssn_ssn" class="valid">
+            </li>
+        </ol>
+        <input id="ssn_submit" type="submit" value="Lisää sotu!" style="margin-left: 129px; margin-bottom: 13px;">
+    </fieldset>
+
 [% IF ( step_1 ) %]
 [%UNLESS notitle && nosurname && nofirstname && nodateofbirth && noinitials && noothernames &&nosex %]
 	<fieldset class="rows" id="memberentry_identity">
@@ -1393,3 +1415,4 @@
 </div>
 [% INCLUDE 'intranet-bottom.inc' %]
 
+<script type="text/javascript" src="[% themelang %]/js/ssn-service.js"></script>
