Bug 11676 - Loading shelving locations based on stuff. For acquisitions. Found out that there is another way of adding items, which has a different mechanism (datatables yay) of addition, so this feature enables shelving location updating in the neworderempty.pl.
Centralized the shelving location fetching code (to koha-to-marc-mapping-api.js)
to have a central place to share related features.

-------------
- TEST PLAN -
-------------
Same as in the first patch, but this time use the neworderempty.pl-script.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderempty.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderempty.tt
@@ -8,9 +8,15 @@
 <script type="text/javascript" src="[% themelang %]/js/additem.js"></script>
 <script type="text/javascript" src="[% themelang %]/js/cataloging.js"></script>
 <script type="text/javascript" src="[% themelang %]/js/prevent_submit.js"></script>
+<script type="text/javascript" src="[% themelang %]/js/koha-to-marc-mapping-api.js"></script>
 <script type="text/javascript">
 //<![CDATA[
 actTotal = "";
+//Set javascript globals to find the shelving location and homebranch elements from the HTML mess.
+var shelvingLocationMarcTag = "[% shelvingLocationMarcTag %]";
+var shelvingLocationMarcSubfield = "[% shelvingLocationMarcSubfield %]";
+var homebranchMarcTag = "[% homebranchMarcTag %]";
+var homebranchMarcSubfield = "[% homebranchMarcSubfield %]";
 
 function Check(ff) {
     [% IF (AcqCreateItemOrdering) %]
@@ -159,7 +165,7 @@ $(document).ready(function()
             getAuthValueDropbox( 'sort2', sort2_authcat, destination_sort2, sort2 );
         });
         $("#budget_id").change();
-    });
+});
 //]]>
 </script>
 </head>
