Add date format dd.mm.yyyy, known internally as dmydot.
Make it much easier to add other date formats by passing the
date format string to the templates, instead of hard-coding
the allowed formats.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/offline.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/offline.tt
@@ -37,7 +37,7 @@ var NO_UPLOAD_PENDING_MESSAGE = _("You do not have any pending transactions in t
 
 var start;
 
-var dateformat = '[% IF ( dateformat_us ) %]mm/dd/yy[% ELSIF ( dateformat_metric ) %]dd/mm/yy[% ELSE %]yy-mm-dd[% END %]';
+var dateformat = '[% dateformatstyle | replace("yyyy", "yy") %]';
 
 function checkin(barcode, item, error) {
     var alerts = checkAlerts(barcode, item);
