--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderempty.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderempty.tt
@@ -9,6 +9,8 @@
 <script type="text/javascript" src="[% themelang %]/js/cataloging.js"></script>
 <script type="text/javascript" src="[% themelang %]/js/prevent_submit.js"></script>
 <script type="text/javascript" src="[% themelang %]/js/koha-to-marc-mapping-api.js"></script>
+<script type="text/javascript" src="[% themelang %]/js/form-auto-shelving-signum.js"></script>
+<script type="text/javascript" src="[% interface %]/js/oplib-shelvinglabels.js"></script>
 <script type="text/javascript">
 //<![CDATA[
 actTotal = "";
@@ -252,6 +254,11 @@ $(document).ready(function()
         <input type="hidden" name="invoiceincgst" id="invoiceincgst" value="[% invoiceincgst %]" />
         <input type="hidden" name="suggestionid" value="[% suggestionid %]" />
         <input type="hidden" name="import_batch_id" value="[% import_batch_id %]" />
+        <!--KD-130-->
+        <input type="hidden" name="marcfield084a" value="[% commonMarcFieldRef.marc84a %]" />
+        <input type="hidden" name="marcfield100a" value="[% commonMarcFieldRef.marc100a %]" />
+        <input type="hidden" name="marcfield110a" value="[% commonMarcFieldRef.marc110a %]" />
+        <input type="hidden" name="marcfield245a" value="[% commonMarcFieldRef.marc245a %]" />
 
         [% FOREACH loop_currencie IN loop_currencies %]
             <input type="hidden" id="currency_rate_[% loop_currencie.currcode %]"  name="[% loop_currencie.currcode %]" value="[% loop_currencie.rate %]" />
