--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/additem.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/additem.tt
@@ -10,6 +10,8 @@
 <![endif]-->
 <script type="text/javascript" src="[% interface %]/js/browser.js"></script>
 <script type="text/javascript" src="[% themelang %]/js/koha-to-marc-mapping-api.js"></script>
+<script type="text/javascript" src="[% themelang %]/js/form-auto-shelving-signum.js"></script>
+<script type="text/javascript" src="[% interface %]/js/oplib-shelvinglabels.js"></script>
 <script type="text/javascript">
 //<![CDATA[
     var browser = KOHA.browser('[% searchid %]', parseInt('[% biblionumber %]', 10));
@@ -52,7 +54,8 @@ $(document).ready(function(){
         'bInfo': false,
         "bAutoWidth": false
     } ) );
-
+    // KD-130
+    addAutoShelvingLoc("cataloguing");
 });
 function active(numlayer)
 {
@@ -240,6 +243,11 @@ $(document).ready(function() {
     <input type="hidden" name="indicator" value=" " />
     <input type="hidden" name="indicator" value=" " />
     <input type="hidden" name="itemnumber" value="[% itemnumber %]" />
+    <!--KD-130-->
+    <input type="hidden" name="marcfield084a" value="[% commonMarcFieldRef.marc84a %]" />
+    <input type="hidden" name="marcfield100a" value="[% commonMarcFieldRef.marc100a %]" />
+    <input type="hidden" name="marcfield110a" value="[% commonMarcFieldRef.marc110a %]" />
+    <input type="hidden" name="marcfield245a" value="[% commonMarcFieldRef.marc245a %]" />
 
 <fieldset class="action">    [% IF ( opisadd ) %]
     <input type="submit" name="phony_submit" value="phony_submit" id="phony_submit" style="display:none;" onclick="return false;" />
