--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
@@ -397,6 +397,12 @@ $(document).ready(function () {
                             <p class="problem">Any lost item fees for this item will remain on the patron's account</p>
                         [% END %]
                     [% END %]
+                    [% IF ( errmsgloo.isClaimed ) %]
+                        <br />
+                        <h3>Item has been claimed!</h3>
+                        <h4>Please remove the claim letter from your departments claimletterfolder and remove the Item's "Not for loan"-status "Claimed".</h4>
+                        <br />
+                    [% END %]
                     [% IF ( errmsgloo.withdrawn ) %]
                         [% IF BlockReturnOfWithdrawnItems %]
                            <h5>Cannot check in</h5>
