--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/tools-home.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/tools-home.tt
@@ -107,6 +107,11 @@
     <dd>Use tool plugins</dd>
     [% END %]
 
+    [% IF ( CAN_user_tools_claim ) %]
+    <dt><a href="/cgi-bin/koha/tools/claim.pl">Claiming</a></dt>
+    <dd>Claim overdue issues</dd>
+    [% END %]
+
 </dl>
 </div>
 <div class="yui-u">
