Bug 11175 - (KD-16) Displaying component parts in OPAC and SC, Presentation layer
Displaying component parts in intranet prog, opac prog and bootstrap.

Links from the component part's "In: <parent record>" target the parents Control-number ($001)
  and parents Control-number-identifier ($003), which ($003) is expected to be the same
  as the child records.
  This double linking enforces that field 001 is not getting mixed with records from varying sources.

--------------------------------------
TEST PLAN
--------------------------------------

PREREQUISITES:

-AddChildRecordsToDetailedViews system preference needs to be activated.
-opacthemes system preference needs to be 'prog'.
-template system preference needs to be 'prog'.

-Catalog a bunch of child records for a host record.
--Search a record and go to detailed view.
--Use the existing functionality "+ New" -> "New Child Record" to catalog child records.

------------------------
TEST CASE1 - Staff client
------------------------

-Reindex Zebra
-Search for the record you just made childs for and display it in the normal detail.pl -view.
-Verify that a list of child records are displayed on the right side of the browser window.

------------------------
TEST CASE2 - OPAC
------------------------

-Zebra already reindexed?
-Search for the record you just made childs for and display it in the opac-detail.pl -view.
-Verify that a list of child records are displayed on the right side of the browser window.

------------------------
Thank you!

--- a/koha-tmpl/opac-tmpl/prog/en/css/opac.css
+++ b/koha-tmpl/opac-tmpl/prog/en/css/opac.css
@@ -1136,6 +1136,12 @@ table#marc div.results_summary ul li {
 	display : inline;
 }
 
+.componentPartRecordsContainer {
+    float: right;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 #basketcount {
 	display : inline;
 }
