--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-detail.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-detail.tt
@@ -1677,6 +1677,10 @@
 //]]>
 </script>
 
+[% IF ( Koha.Preference( 'AddComponentPartRecordsToDetailedViews' ) == 1 ) %]
+    <script type="text/javascript" src="[% interface %]/[% theme %]/js/componentPart.js"></script>
+[% END %]
+
 [% IF OPACPopupAuthorsSearch %]
     <script type="text/javascript">
     //<![CDATA[
