KD-132 - Biblio overlay merging rules
Enable using Matchpoints from Home -> Administration -> Record matching rules to preserve existing fields
from old overlayed bibliographic records.

1. Define a matching rule, simple Match points and Match checks are supported
1.1 Using Match points:
  -if only tag is defined, all the subfields of the old biblio are copied to the new biblio
  -if new biblio doesn't have the defined field, the old field is cloned and appended to the new biblio,
    unless subfield rules are defined.
  -fields present in the old biblio and not in the new biblio are discarded, unless defined as Match Points.
  -Only one subfield can be defined per Match Point rule, and it is copied from the old record to the new one.
  -Several Match Points can be defined to copy more subfields.
1.2 Using Match Checks
  -Works like a Match Point, but with the addition of target field/subfield definition.
  -Source normalizer must contain the word 'copy' and target normalizer must containt the word 'paste'.
  ---In this case from the new Record the copy-source is copied to the paste-target.
  -When source normalizer is move and target normalizer is paste
  ---In this case from the new Record the move-source is moved to the paste-target. Also the move-source is
     deleted. If subfield is given, only the subfield is deleted. If only field is given, all the same fields
     are deleted.
  -When source normalizer is preserve and target normalizer is preserve
  ---The source is taken from the old record and added to the new record.

2. Find a biblio, note that it has the fields and subfields you want to preserve.
3. Select Edit -> Replace record via Z39.50, and find a record to overlay with.
4. In the search results view, select the Matcher from the dropdown list. You don't have to use one.
5. Import!
6. Check that you have a new cookie, 'matcher', with the matcher_id of the matcher of choice.
   Your matcher selection persists to the next overlay.
7. Check that in the

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/z3950_search.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/z3950_search.tt
@@ -2,13 +2,18 @@
 <title>Koha &rsaquo; Z39.50 search results</title>
 [% INCLUDE 'greybox.inc' %]
 [% INCLUDE 'doc-head-close.inc' %]
-<script type="text/javascript" src="[% interface %]/lib/jquery/plugins/jquery.checkboxes.min.js"></script>
+<script type="text/javascript" src="[% themelang %]/lib/jquery/plugins/jquery.checkboxes.min.js"></script>
+<script type="text/javascript" src="[% themelang %]/lib/jquery/plugins/jquery.cookie.min.js"></script>
 <link rel="stylesheet" type="text/css" href="[% themelang %]/css/datatables.css" />
 [% INCLUDE 'datatables.inc' %]
 <script type="text/javascript">
 //<![CDATA[
 function Import(GetThisOne,biblionumber) {
-    opener.document.location="../cataloguing/addbiblio.pl?biblionumber="+biblionumber+"&z3950=1&frameworkcode=[% frameworkcode %]&breedingid="+GetThisOne;
+
+    var matcherid = $("select[breeding="+GetThisOne+"]").val();
+    $.cookie('matcher', matcherid); //Firstly set the matcher persistence cookie
+
+    opener.document.location="../cataloguing/addbiblio.pl?biblionumber="+biblionumber+"&z3950=1&frameworkcode=[% frameworkcode %]&breedingid="+GetThisOne+"&matcherid="+matcherid;
     window.close();
     return false;
 }
@@ -43,7 +48,7 @@ $(document).ready(function(){
             $(".linktools").hide();
             $("tr").removeClass("selected");
             row.addClass("selected");
-            if($tgt.is("a")||$tgt.is(":nth-child(7)")||$tgt.is(":nth-child(8)")||$tgt.is(":nth-child(9)")||$tgt.is(":nth-child(10)")){
+            if($tgt.is("option")||$tgt.is("select")||$tgt.is("a")||$tgt.is(":nth-child(7)")||$tgt.is(":nth-child(8)")||$tgt.is(":nth-child(9)")||$tgt.is(":nth-child(10)")||$tgt.is(":nth-child(11)")){
                 return true;
             } else {
                 var position = $(this).offset();
@@ -160,6 +165,7 @@ tr.selected { background-color : #FFFFCC; } tr.selected td { background-color : 
         <th>LCCN</th>
         <th>MARC</th>
         <th>Card</th>
+        <th>Matcher</th>
 		<th>&nbsp;</th>
     </tr></thead>
     <tbody>[% FOREACH breeding_loo IN breeding_loop %]
@@ -175,6 +181,10 @@ tr.selected { background-color : #FFFFCC; } tr.selected td { background-color : 
             <td>[% breeding_loo.lccn %]</td>
             <td><a href="/cgi-bin/koha/catalogue/showmarc.pl?importid=[% breeding_loo.breedingid %]" title="MARC" rel="gb_page_center[600,500]">MARC</a></td>
             <td><a href="/cgi-bin/koha/catalogue/showmarc.pl?viewas=card&amp;importid=[% breeding_loo.breedingid %]" title="MARC" rel="gb_page_center[600,500]">Card</a></td>
+            <td><select breeding="[% breeding_loo.breedingid %]" id="matcher" name="matcher">
+                    <option value=""></option>[% FOREACH matcher IN matchers %]
+                    <option value="[% matcher.matcher_id %]" [% IF matcher.selected %]selected[% END %]>[% matcher.description %]</option>
+            [% END %]</select></td>
             <td><a href="#" onclick="Import([% breeding_loo.breedingid %],[% breeding_loo.biblionumber %]); return false">Import</a></td> 
         </tr>
         [% END %]
