KD-160 Display language codes in biblio views and in "holds to pull"-view
Created templates to display different kinds of catalogued language types:
 eg. 041$a, 041$b, 041$j, ...

Calling that template from Detail and Result -views of OPAC and Staff Client

--- a/koha-tmpl/opac-tmpl/bootstrap/lib/bootstrap/css/bootstrap.css
+++ b/koha-tmpl/opac-tmpl/bootstrap/lib/bootstrap/css/bootstrap.css
@@ -6305,3 +6305,9 @@ button.close {
     overflow: visible !important;
   }
 }
+
+.lang_icon {
+  padding-right: 5px;
+  vertical-align: baseline;
+  height: 11px;
+}
