--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -1859,6 +1859,11 @@ span.permissiondesc {
         display : none;
 }
 
+.lang_icon {
+  padding-right: 5px;
+  vertical-align: baseline;
+  height: 11px;
+}
 .results_summary {
   display: block;
   font-size : 85%; 
