KD-160 Display language codes in biblio views and in "holds to pull"-view, "holds to pull" modification
Added a template toolkit include file to print the language codes.
Got the marcxml in pendingreserves.pl and parsed the language codes out of it.

  P.S. Experimenting with adding a languages column to biblioitems and using this, but lets take a look if
       performance suffers noticeably with xml parsing.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/pendingreserves.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/pendingreserves.tt
@@ -112,9 +112,12 @@ $(document).ready(function() {
             <td>[% reserveloo.rcount %]</td>
             <td>
             <p>
-                [% INCLUDE 'biblio-default-view.inc' biblionumber = reserveloo.biblionumber %]
-                [% reserveloo.title |html %]</a></p>
-                [% IF ( reserveloo.author ) %]<p> by [% reserveloo.author %]</p>[% END %]
+        [% INCLUDE 'biblio-default-view.inc' biblionumber = reserveloo.biblionumber %]
+                    [% reserveloo.title |html %]
+
+                [% INCLUDE 'showLanguages.inc' languagecodes = reserveloo.languagecodes %]
+                </a> [% IF ( reserveloo.author ) %]<p> by [% reserveloo.author %]</p>[% END %]
+            </p>
             </td>
         [% ELSE %]
             <td>"</td>
