KD-110 - Fastloan (pikalaina), enforce duedate and bigger daily fine, block holds and renewals.
Loan duration is set to 7 days for items with collection code PILA (Pikalaina).

Renewals are blocked for PILA, modification made to web services and SIP2.

Hold is crudely blocked, but the whole holds/issues/renews messaging chain needs to be improved
to enable passing more varied messages from CanItemBe*() to presentatin layer.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/renew.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/renew.tt
@@ -81,6 +81,10 @@
 
                                 <p>[% borrower.firstname %] [% borrower.surname %] ( <a href="/cgi-bin/koha/members/moremember.pl?borrowernumber=[% borrower.borrowernumber %]"> [% borrower.cardnumber %] </a> ) is currently restricted.</p>
 
+                            [% ELSIF error == "non_renewable" %]
+
+                                <p>This item is non renewable.</p>
+
                             [% ELSE %]
 
                                 [% error %]
