--- a/koha-tmpl/intranet-tmpl/prog/en/modules/rotating_collections/rotatingCollections.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/rotating_collections/rotatingCollections.tt
@@ -1,35 +1,257 @@
 [% INCLUDE 'doc-head-open.inc' %]
 <title>Koha &rsaquo; Tools &rsaquo; Rotating collections</title>
 [% INCLUDE 'doc-head-close.inc' %]
+[% INCLUDE 'datatables.inc' %]
+<link rel="stylesheet" type="text/css" href="[% themelang %]/css/datatables.css" />
+<script type="text/javascript">
+  //<![CDATA[
+      $(document).ready(function() {
+
+        var collectionsTable = $("#table-collections").dataTable($.extend(true, {}, dataTablesDefaults, {
+          'bAutoWidth': true,
+          'bPaginate': false,
+          'bFilter': false,
+          'bInfo': false,
+          "aoColumnDefs": [
+            { 'bSortable': false, 'aTargets': [ 'nosort' ] }
+          ]
+        }));
+
+        // KD-139: Handle collection removal clicks
+        $("body").on("click", "a[id^=remove-col]", function() {
+          var selectedCollectionId = this.getAttribute('data-colid');
+          var selectedCollectionTitle = this.getAttribute('data-coltitle');
+          var selectedCollectionDesc = this.getAttribute('data-coldesc');
+          if (selectedCollectionId && selectedCollectionTitle) {
+            $("#btn-remove-confirm").attr("data-colid", selectedCollectionId);
+            $("#modal-remove-body-message").text("Please confirm the removal of collection: " + selectedCollectionTitle);
+            $("#modal-remove-body-desc").text("Description: " + selectedCollectionDesc);
+          }
+        });
+
+        // KD-139: Handle collection transfer clicks
+        $("body").on("click", "a[id^=transfer-col]", function() {
+          var selectedCollectionId = this.getAttribute('data-colid');
+          var selectedCollectionTitle = this.getAttribute('data-coltitle');
+          var selectedCollectionTransferText = $("select[id=transfer-branch-" + selectedCollectionId + "] option:selected").text();
+          var selectedCollectionTransferTo = $("select[id=transfer-branch-" + selectedCollectionId + "]").val();
+          if (selectedCollectionId && selectedCollectionTitle && selectedCollectionTransferTo) {
+            $("#btn-transfer-confirm").attr("data-colid", selectedCollectionId);
+            $("#btn-transfer-confirm").attr("data-transferto", selectedCollectionTransferTo);
+            $("#modal-transfer-body-message").text("Please confirm the transfer of collection \'"
+                                                    + selectedCollectionTitle + "\' to "
+                                                    + selectedCollectionTransferText);
+          }
+        });
+
+        // KD-139: Handle collection edit clicks
+        $("body").on("click", "a[id^=edit-col]", function() {
+          var selectedCollectionId = this.getAttribute('data-colid');
+          var selectedCollectionTitle = this.getAttribute('data-coltitle');
+          var selectedCollectionDesc = this.getAttribute('data-coldesc');
+          if (selectedCollectionId && selectedCollectionTitle) {
+            $("#btn-edit-confirm").attr("data-colid", selectedCollectionId);
+            $("#modal-edit-desc").val(selectedCollectionDesc);
+            $("#modal-edit-title").val(selectedCollectionTitle);
+          }
+        });
+
+        $("#btn-transfer-confirm").click(function() {
+          var colToTransfer = this.getAttribute('data-colid');
+          var colToTransferTo = this.getAttribute('data-transferto');
+          if (colToTransfer && colToTransferTo) {
+            transferCollection(colToTransfer, colToTransferTo);
+          }
+        });
+
+        $("#btn-remove-confirm").click(function() {
+          var colToRemove = this.getAttribute('data-colid');
+          if (colToRemove) {
+            removeCollection(colToRemove);
+          }
+        });
+
+        $("#btn-edit-confirm").click(function() {
+          var colToEdit = this.getAttribute('data-colid');
+          var colTitle = $("#modal-edit-title").val();
+          var colDesc = $("#modal-edit-desc").val();
+          if (colToEdit && colTitle) {
+            editCollection(colToEdit, colTitle, colDesc);
+          }
+        });
+
+        $("#btn-new-confirm").click(function() {
+          var colTitle = $("#modal-new-title").val();
+          var colDesc = $("#modal-new-desc").val();
+          if (colTitle) {
+            newCollection(colTitle, colDesc);
+          }
+        });
+
+        $(document).ajaxStart(function (event) {
+            $("#alert-block").hide();
+            $("#alert-block").after($(".loading").show());
+        });
+        $(document).ajaxStop(function () {
+            $(".loading").hide();
+            $("#alert-block").show();
+        });
+
+      });
+
+      // KD-139: Removes a collection using a standard ajax-call
+      function removeCollection(selectedCollectionId) {
+        $.get("editCollections.pl?action=delete&colId=" + selectedCollectionId, function(response) {
+          var resultMsg = $(response).find("#alert-block");
+          var rowToRemove = $("button[id=remove-col-" + selectedCollectionId + "]").closest('tr');
+          $("#alert-block").html(resultMsg);
+          if ($("#alert-block").find('.alert-success')) {
+            reloadDataTable();
+          }
+          var tableRows = $("#table-collections tr").length;
+          if (tableRows < 3) {
+            window.location.reload();
+          }
+        });
+      }
+
+      // KD-139: Performs a transfer on a collection using a standard ajax-call
+      function transferCollection(selectedCollectionId, selectedCollectionTransferTo) {
+        $.post("transferCollection.pl",
+          {
+            colId: selectedCollectionId,
+            toBranch: selectedCollectionTransferTo,
+            transferAction: "collectionTransfer"
+          })
+          .done(function(response) {
+            var resultMsg = $(response).find("#alert-block");
+            $("#alert-block").html(resultMsg);
+            if ($("#alert-block").find('.alert-success')) {
+              reloadDataTable();
+            }
+        });
+      }
+
+      // KD-139: Edits the given item via an ajax-call
+      function editCollection(colId, colTitle, colDesc) {
+        $.post("editCollections.pl?action=edit&colId=" + colId,
+          {
+            colId: colId,
+            title: colTitle,
+            description: colDesc,
+            action: 'update'
+          })
+          .done(function(response) {
+            var resultMsg = $(response).find("#alert-block");
+            $("#alert-block").html(resultMsg);
+            if ($("#alert-block").find('.alert-success')) {
+              reloadDataTable();
+            }
+        });
+      }
+
+      function newCollection(colTitle, colDesc) {
+        $.post("editCollections.pl",
+          {
+            title: colTitle,
+            description: colDesc,
+            action: 'create'
+          })
+          .done(function(response) {
+            var resultMsg = $(response).find("#alert-block");
+            $("#alert-block").html(resultMsg);
+            if ($("#alert-block").find('.alert-success')) {
+              $("input[id^=modal-new]").val("");
+              reloadDataTable();
+            }
+        });
+      }
+
+      function reloadDataTable() {
+        $.get("rotatingCollections.pl", function(response) {
+          var newCollectionsTable = $(response).find("#table-collections").parent().html();
+          var oldCollectionsTable = $("#table-collections").parent();
+          if (oldCollectionsTable.html()) {
+            oldCollectionsTable.replaceWith(newCollectionsTable);
+          }
+          else {
+            $("#title-main").next().remove();
+            $("#title-main").after(newCollectionsTable);
+          }
+          $("#table-collections").dataTable($.extend(true, {}, dataTablesDefaults, {
+            'bAutoWidth': true,
+            'bPaginate': false,
+            'bFilter': false,
+            'bInfo': false,
+            "aoColumnDefs": [
+              { 'bSortable': false, 'aTargets': [ 'nosort' ] }
+            ]
+          }));
+        });
+      }
+
+  //]]>
+</script>
 </head>
 <body id="rcoll_rotatingCollections" class="tools rcoll">
 [% INCLUDE 'header.inc' %]
 [% INCLUDE 'cat-search.inc' %]
 
 <div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/tools/tools-home.pl">Tools</a> &rsaquo; Rotating collections</div>
-
+<br />
+<div id="alert-block">
+</div>
 <div id="doc3">
 <div id="bd">
         <div class="yui-gb">
 
-      <h1>Rotating collections</h1>
+      <h1 id="title-main">Rotating collections</h1>
       <div>
         [% IF ( collectionsLoop ) %]
-          <table>
-            <tr>
-              <th><strong>Title</strong></th>
-              <th>Description</strong></th>
-              <th>Current location</th>
-              <th>Add/Remove items</th>
-              <th>Transfer collection</th>
-            </tr>
+          <table id="table-collections">
+            <thead>
+              <tr>
+                <th><strong>Title</strong></th>
+                <th>Description</strong></th>
+                <th>Owner</th>
+                <th>Items</th>
+                <th>Transferred</th>
+                <th class="nosort">Manage collection</th>
+                <th class="nosort">Transfer collection</th>
+                <th class="nosort">Edit</th>
+                <th class="nosort">Delete</th>
+              </tr>
+            </thead>
             [% FOREACH collectionsLoo IN collectionsLoop %]
               <tr>
-                <td>[% collectionsLoo.colTitle %]</td>
-                <td>[% collectionsLoo.colDesc %]</td>
-                <td>[% collectionsLoo.colBranchcode %]</td>
-                <td><a href="addItems.pl?colId=[% collectionsLoo.colId %]">Add/Remove Items</a></td>
-                <td><a href="transferCollection.pl?colId=[% collectionsLoo.colId %]">Transfer Collection</a></td>
+                <td><a href="editCollections.pl?action=edit&colId=[% collectionsLoo.colId %]">[% collectionsLoo.colTitle %]</a></td>
+                <td><a href="editCollections.pl?action=edit&colId=[% collectionsLoo.colId %]">[% collectionsLoo.colDesc %]</a></td>
+                <td>[% collectionsLoo.branchname %]</td>
+                <td>[% collectionsLoo.colItemsCount %]</td>
+                <td>[% IF collectionsLoo.itemsTransferred > 0 %]
+                      [% IF collectionsLoo.itemsTransferred == collectionsLoo.colItemsCount %]
+                        All items transferred
+                      [% ELSE %]
+                        [% collectionsLoo.itemsTransferred %] items transferred
+                      [% END %]
+                    [% ELSE  %]
+                      None transferred yet
+                    [% END %]
+                </td>
+                <td><a href="addItems.pl?colId=[% collectionsLoo.colId %]">Manage collection</a></td>
+                <td><a class="btn btn-small" id="transfer-col-[% collectionsLoo.colId %]" data-toggle="modal" href="#transferColModal" class="btn btn-small" data-colid="[% collectionsLoo.colId %]" data-coltitle="[% collectionsLoo.colTitle %]" data-coldesc="[% collectionsLoo.colDesc %]"><i class="icon-gift"></i> Transfer collection</a>
+                <select name="transfer-branch-[% collectionsLoo.colId %]" id="transfer-branch-[% collectionsLoo.colId %]">
+                    [% FOREACH branch IN branchesLoop %]
+                      [% IF ( branch.selected ) %]
+                        <option value="[% branch.value %]" selected="selected">[% branch.branchname %]</option>
+                      [% ELSE %]
+                        <option value="[% branch.value %]">[% branch.branchname %]</option>
+                      [% END %]
+                    [% END %]
+                </select></td>
+                <td><a class="btn btn-small" id="edit-col-[% collectionsLoo.colId %]" href="#editColModal" data-toggle="modal" data-coltitle="[% collectionsLoo.colTitle %]" data-colid="[% collectionsLoo.colId %]" data-coldesc="[% collectionsLoo.colDesc %]"><i class="icon-edit"></i> Edit</a></td>
+                <td><a class="btn btn-small" id="remove-col-[% collectionsLoo.colId %]" href="#removeColModal" data-toggle="modal" data-coltitle="[% collectionsLoo.colTitle %]" data-colid="[% collectionsLoo.colId %]" data-coldesc="[% collectionsLoo.colDesc %]"><i class="icon-remove"></i> Delete</a></td>
+              </tr>
               </tr>
             [% END %]
           </table>
@@ -40,8 +262,106 @@
 
       <div>
 	<br/>
-    <input type="button" value="Edit collections" onclick="window.location.href='editCollections.pl'">
+    <a class="btn btn-small" id="table-col-add" href="#newColModal" data-toggle="modal"><i class="icon-plus"></i> New collection</a>
+    <a class="btn btn-small" href="editCollections.pl"><i class="icon-edit"></i> Edit collections</a>
       </div>    
 </div>
 </div>
+<!-- Modal for confirm deletion box-->
+<div class="modal hide" id="removeColModal" tabindex="-1" role="dialog" aria-labelledby="removeColModalLabel" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="closebtn" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="removeColModalHeader">Confirm collection removal</h3>
+    </div>
+    <div class="modal-body">
+       <strong><p id="modal-remove-body-message"></p></strong>
+       <p id="modal-remove-body-desc"></p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary" id="btn-remove-cancel" data-dismiss="modal">Cancel</button>
+        <button type="submit" class="btn btn-default" id="btn-remove-confirm" data-colid="" data-dismiss="modal">Remove collection</button>
+    </div>
+</div>
+<!-- Modal for confirm transfer box-->
+<div class="modal hide" id="transferColModal" tabindex="-1" role="dialog" aria-labelledby="transferColModalLabel" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="closebtn" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="transferColModalHeader">Confirm collection transfer</h3>
+    </div>
+    <div class="modal-body">
+       <strong><p id="modal-transfer-body-message"></p></strong>
+       <p id="modal-transfer-body-desc"></p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary" id="btn-transfer-cancel" data-dismiss="modal">Cancel</button>
+        <button type="submit" class="btn btn-default" id="btn-transfer-confirm" data-colid="" data-transferto="" data-dismiss="modal">Transfer collection</button>
+    </div>
+</div>
+<!-- Modal for edit collection box-->
+<div class="modal hide" id="editColModal" tabindex="-1" role="dialog" aria-labelledby="editColModalLabel" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="closebtn" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="editColModalHeader">Edit collection</h3>
+    </div>
+    <div class="modal-edit-body">
+      <table id="modal-edit-table">
+        <tbody>
+          <tr>
+            <td>
+              <label for="title">Title: </label>
+            </td>
+            <td>
+              <input id="modal-edit-title" type="text" value="" name="title">
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <label for="description">Description: </label>
+            </td>
+            <td>
+              <input id="modal-edit-desc" type="text" value="" name="description" size="50">
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary" id="btn-edit-cancel" data-dismiss="modal">Cancel</button>
+        <button type="submit" class="btn btn-default" id="btn-edit-confirm" data-colid="" data-dismiss="modal">Save</button>
+    </div>
+</div>
+<!-- Modal for new collection box-->
+<div class="modal hide" id="newColModal" tabindex="-1" role="dialog" aria-labelledby="newColModalLabel" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="closebtn" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="newColModalHeader">New collection</h3>
+    </div>
+    <div class="modal-new-body">
+      <table id="modal-new-table">
+        <tbody>
+          <tr>
+            <td>
+              <label for="title">Title: </label>
+            </td>
+            <td>
+              <input id="modal-new-title" type="text" value="" name="title">
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <label for="description">Description: </label>
+            </td>
+            <td>
+              <input id="modal-new-desc" type="text" value="" name="description" size="50">
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary" id="btn-new-cancel" data-dismiss="modal">Cancel</button>
+        <button type="submit" class="btn btn-default" id="btn-new-confirm" data-colid="" data-dismiss="modal">Create</button>
+    </div>
+</div>
+<div class="loading hide"><strong>Processing...</strong><img src="/intranet-tmpl/prog/img/loading.gif" /></div>
 [% INCLUDE 'intranet-bottom.inc' %]
