--- a/koha-tmpl/intranet-tmpl/prog/en/modules/rotating_collections/transferCollection.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/rotating_collections/transferCollection.tt
@@ -9,23 +9,69 @@
 <div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/tools/tools-home.pl">Tools</a> &rsaquo; <a href="/cgi-bin/koha/rotating_collections/rotatingCollections.pl">Rotating collections</a> &rsaquo; Transfer collection</div>
 <div id="doc3">
 <div id="bd">
-        <div class="yui-gb">
+  <div class="yui-gb">
       <h1>Rotating collections: Transfer collection</h1>
     <br />
-      [% IF ( transferSuccess ) %]
-        <div>Collection transferred successfully</div>
+    <div id="alert-block">
+      <!-- Success conditions -->
+      [% IF transferSuccess && previousAction == "collectionTransfer" %]
+        <div class="alert-success">Collection transferred successfully</div>
+      [% ELSIF transferSuccess && previousAction == "itemTransfer" %]
+        <div class="alert-success">Item transferred successfully</div>
+      [% ELSIF transferSuccess && previousAction == "itemReturn" %]
+        <div class="alert-success">Item returned successfully</div>
+      [% ELSIF transferSuccess && previousAction == "collectionReturn" && problemItems %]
+        <div class="alert-success">Some items returned succesfully, problematic items: <br />
+          [% FOREACH item IN problemItems %]
+            [% item %]<br />
+          [% END %]
+        </div>
+      [% ELSIF transferSuccess && previousAction == "collectionReturn" && !problemItems %]
+        <div class="alert-success">Collection returned succesfully</div>
+      <!-- Cases where not all items were transferred succesfully -->
+      [% ELSIF transferSuccess && previousAction == "collectionTransfer" && problemItems %]
+        <div class="alert-success">Some items transferred succesfully, problematic items: <br />
+          [% FOREACH item IN problemItems %]
+            [% item %]<br />
+          [% END %]
+        </div>
+      <!-- Failing conditions-->
+      [% ELSIF transferFailure && previousAction == "collectionTransfer" %]
+        <div class="alert-error">Failed to transfer any items in collection!</div>
+        <div class="alert-error">Problems: <br />
+          [% FOREACH item IN problemItems %]
+            <strong>[% item %]</strong><br />
+          [% END %]
+        </div>
+      [% ELSIF transferFailure && previousAction == "itemTransfer" %]
+        <div class="alert-error">Failed to transfer item!</div>
+        <div class="alert-error">Problems: <br />
+          [% FOREACH error IN errorMessage %]
+            <strong>[% error %]</strong><br />
+          [% END %]
+        </div>
+      [% ELSIF transferFailure && previousAction == "itemReturn" %]
+        <div class="alert-error">Failed to return item!</div>
+        <div class="alert-error">Problems: <br />
+          [% FOREACH error IN errorMessage %]
+            <strong>[% error %]</strong><br />
+          [% END %]
+        </div>
+      [% ELSIF transferFailure && previousAction == "collectionReturn" %]
+        <div class="alert-error">Failed to return any item in collection!</div>
+        <div class="alert-error">Problematic items: <br />
+          [% FOREACH item IN errorMessages %]
+            <strong>[% item %]</strong><br />
+          [% END %]
+        </div>
       [% END %]
-
-      [% IF ( transferFailure ) %]
-        <div>Failed to transfer collection!</div>
-        <div>Reason: <strong>[% errorMessage %]</strong></div>
-      [% END %]
-
+    </div>
       [% IF ( transferSuccess ) %]
       [% ELSE %]
         <div>
           <form action="transferCollection.pl" method="post">
             <input type="hidden" name="colId" value="[% colId %]">
+            <input type="hidden" name="transferAction" value="collectionTransfer">
   
             <label for="toBranch">Choose your library:</label>
             <select name="toBranch">
@@ -40,9 +86,9 @@
 
       <div>
         <br/>
-        <input type="button" value="Return to rotating collections home" onclick="window.location.href='rotatingCollections.pl'">
+        <a href="rotatingCollections.pl" class="btn btn-small"><i class="icon-home"></i> Return to rotating collections home</a>
       </div>
-
+</div>
 </div>
 </div>
 [% INCLUDE 'intranet-bottom.inc' %]
